# ILCMDS

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
ProjConfigure/: CMakeLists.txt  Config.hpp.in
include/: PCH.hpp
include/core/: AppStatusMenu.hpp  Application.hpp
include/manage/: Command.hpp  CommandManager.hpp
include/menus/: AppAddCommandMenu.hpp  AppMainMenu.hpp  AppMenu.hpp  AppStatusMenu.hpp
src/: CMakeLists.txt  main.cpp
src/core/: AppStatusMenu.cpp  Application.cpp  CMakeLists.txt
src/manage/: CMakeLists.txt  Command.cpp  CommandManager.cpp
src/menus/: AppAddCommandMenu.cpp  AppMainMenu.cpp  AppMenu.cpp  AppStatusMenu.cpp  CMakeLists.txt
